@@ -1,3 +1,12 @@
+2010-01-17  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	Fix generation of HTML class docs.
+
+	* bin/gled-generate-htmldoc:
+	* macros/gled_html_doc.C:
+	Adapt to current THtml.
+	Modules and templated classes are not handled properly (yet).
+
 2009-12-27  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* configure:
